--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>
-			Mehadi hasan rubel CV
+			Mehadi hasan
 		</title>
 	</head>
 	<body>
@@ -13,7 +13,8 @@
 			Senior Web Developer specializing in front end development. Experienced with all stages of the development cycle for dynamic web projects. Well-versed in numerous programming languages including HTML5, PHP OOP, JavaScript, CSS, MySQL. Strong background in project management and customer relations.
 		</p>
 		<h1>
-			<u>Skill Highlights</u>
+			<u>Skill developer</u>
+			<u>Skill developer</u>
 		</h1>
 			<ul>
 				<li>
@@ -21,15 +22,16 @@
 					<p>•Strong decision maker</p>
 					<p>•Complex problem solver</p>
 					<p>•Creative design</p>
-					<p>•  Innovative</p>
+					<p>• Innovative</p>
 					<p>Service-focused</p>
+					<p>web developer</p>
 				</li>
 			</ul>
 		<h1>
 			<u>Experience</u>
 		</h1>
 		<p>
-			<b>Web Developer</b> - 09/2015 to 05/2023<br>
+			<b>Web Developer</b> - 09/2015 to 05<br>
             <b>Lear Web Design</b>, BASIS-SEIP-MITB
 		<ul>
 			<li>•	Cooperate with designers to create clean interfaces and simple, intuitive interactions and experiences.<br>
